<resources>
    <string name="app_name">FoodPlannerApp</string>
    <string name="dailyInspiration">Daily Inspiration</string>
    <string name="category">category</string>
    <string name="web_default_client_id">
        378947925742-h893866r6lnglg9nciq9e5mloa518rse.apps.googleusercontent.com
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addToFav">Add To Favourites</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="mealPlan">Meal Plan</string>
    <string name="appName">Foody</string>
    <string name="appTitle">Cook With Confidence</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="learn">Take a look to learn</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="login">Login</string>
    <string name="meal">Meal of the Day</string>
    <string name="categories">Categories</string>
    <string name="suggested">More You Might Like</string>
    <string name="name">Enter your name</string>
    <string name="register">Register</string>
    <string name="dialogTitle">Sign Up for More Features</string>
    <string name="dialogMessge">Add you food preferences, Plan your meals and more!</string>
    <string name="profile">Profile</string>
    <string name="logout">LogOut</string>
    <string name="mealSearch">Meal</string>
    <string name="countries">Country</string>
    <string name="savedMeals">My Saved Meals</string>
    <string name="plans">My Plans</string>
    <string name="input_email">Email</string>
    <string name="name_input">Name</string>
    <string name="no_connection">No internet connection</string>
    <string name="skip">Skip</string>
    <string name="noAcount">Don\'t have an acount?</string>
    <string name="signup">SignUp</string>
    <string name="haveAcoount">Have an acount?</string>
    <string name="signin">SignIn</string>
</resources>