<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/searchFragment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/search"
        android:title="@string/search" />
    <item
        android:id="@+id/favouritesFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/favorite"
        android:title="@string/favourites" />
    <item
        android:id="@+id/weeklyPlanFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/calendar"
        android:title="@string/mealPlan" />
    <item
        android:id="@+id/profileFragment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/outline_person"
        android:title="@string/profile" />
</menu>