<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="48dp"
    android:paddingTop="8dp"
    android:paddingEnd="48dp"
    android:paddingBottom="8dp"
    tools:context=".auth_feature.view.profileFragment">




<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/textInputLayout2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:textColorHint="@color/darkGreen"-->
<!--        app:hintTextColor="@color/darkGreen"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView2">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/profileName"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:drawableStart="@drawable/outline_person"-->
<!--            android:drawablePadding="8dp"-->
<!--            android:drawableTint="@color/darkGreen"-->
<!--            android:hint="@string/name_input"-->
<!--            android:textColor="@color/darkGreen"-->
<!--            android:textColorHint="@color/darkGreen" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:textColorHint="@color/darkGreen"
        app:hintTextColor="@color/darkGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/outline_email"
            android:drawablePadding="8dp"
            android:drawableTint="@color/darkGreen"
            android:hint="@string/input_email"
            android:textColor="@color/darkGreen"
            android:textColorHint="@color/darkGreen" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/darkGreen"
        android:editable="false"
        android:text="@string/logout"
        android:textColor="@color/lightGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="120dp"
        android:fontFamily="@font/amita"
        android:text="@string/appName"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>